feat: legal
